<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".profile.LoginActivity">

<FrameLayout
    android:id="@+id/frame_layout"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/backNavigationView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <View
            android:id="@+id/viewHeaderBackground"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_270sdp"
            android:background="@color/teal"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="-85dp">

        </View>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_pic"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:layout_marginTop="65dp"
            android:foregroundGravity="center"
            android:src="@drawable/login_header"
            app:layout_constraintStart_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/title"/>


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="931dp"
            android:layout_height="313dp"
            android:src="@drawable/circles"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:gravity="center"
            android:text="Login"
            android:textColor="@color/white"
            android:textSize="@dimen/_20ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:id="@+id/scrollable"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:scrollbars="none"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewHeaderBackground"
            app:layout_constraintVertical_bias="1.0"
            tools:layout_editor_absoluteX="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/emailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="Enter email address"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="10dp" />

                <EditText
                    android:id="@+id/passwordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:hint="Enter password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="20dp"
                    android:paddingEnd="0dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="Login" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Don't have an account?"
                    android:textSize="@dimen/_12sdp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="4dp" />

                <TextView
                    android:id="@+id/signUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="Sign up"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />


                <TextView
                    android:id="@+id/forgotPasswordButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center"
                    android:text="Forgot Password?"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/backNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/back_nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
